--- a/dev_readme.html
+++ b/dev_readme.html
@@ -25,7 +25,7 @@
 
 <h4 style = "text-align:center">Datypes and Storage of Data</h4>
 <p>
-	Equipment Class: (stores all the equipment from the excel file) 
+	Equipment Class: (stores all the equipment from the excel file)
 	<div style = "margin-left: 20px">
 	<p>Class variables:</p>
 	<ul>
@@ -38,7 +38,7 @@
 	</ul>
 	<p>Class methods:</p>
 	<ul>
-		<li><b>append(self, to_append:dict)</b> Takes in a dict as an argument</li><p>Appends self.items with the new equipment dictionary, appends self.names, appends self.inputs</p> 
+		<li><b>append(self, to_append:dict)</b> Takes in a dict as an argument</li><p>Appends self.items with the new equipment dictionary, appends self.names, appends self.inputs</p>
 		<li><b>next_index(self)</b> No arguments<p>Increments the value of self.cur_index</p></li>
 		<li><b>prev_index(self)</b> No arguments<p>Decriments the value of self.cur_index</p></li>
 	</ul>
@@ -49,16 +49,16 @@
 	<div style = "margin-left: 20px">
 	<p>Class variables:</p>
 	<ul>
-		<li>self.items = list()</li><p>Follows the format:</br>         
+		<li>self.items = list()</li><p>Follows the format:</br>
 		['f_p_max_output', [408.81554560308007, 'kg', 0]],</br>
 		['f_p_min_output', [76.65291480057748, 'kg', 0]],</br>
-		['f_p_tot_output', [76.65291480057748, 'kg', 0]],</br>...</p>	
+		['f_p_tot_output', [76.65291480057748, 'kg', 0]],</br>...</p>
 	</ul>
 	<p>Class methods:</p>
 	<ul>
 		<li><b>append(self, to_append)</b>Takes tuple or list argument</li><p>Converts to_append to array and appends self.items</p>
 		<li><b>clear(self)</b></li><p>Clears self.items</p>
-		<li><b>display(self)->list</b> No arguments</li><p>Returns a list of variables and values that is easier to display in the GUI. Rounds decimals to 2 digits. </br>Ex: [ 'f_p_tot_output = 408.82 kg', 'f_p_min_output = 76.65 kg', ...]  
+		<li><b>display(self)->list</b> No arguments</li><p>Returns a list of variables and values that is easier to display in the GUI. Rounds decimals to 2 digits. </br>Ex: [ 'f_p_tot_output = 408.82 kg', 'f_p_min_output = 76.65 kg', ...]
 	</ul>
 	</div>
 </p>
@@ -69,15 +69,15 @@
 	The MathcadPy library is used as a wrapper that allows you to access all of the mathcad api endpoints from the comfort of Python. You can read more about the Mathcad API <a target = blank href = "https://support.ptc.com/help/mathcad/r7.0/en/index.html#page/PTC_Mathcad_Help%2Fmathcad_and_automation_api.html%23">here</a>. The API allows you to modify and change Mathcad Prime files. Despite PTC's documenation, you cannot print documents.
 </p>
 <p>
-	The function <b>get_eqpt_from_xl(filepath:str)->Equipment</b> takes in the filepath of the input excel file and returns the Equipment object. This function is executed right after the choose files window is closed. 
+	The function <b>get_eqpt_from_xl(filepath:str)->Equipment</b> takes in the filepath of the input excel file and returns the Equipment object. This function is executed right after the choose files window is closed.
 
 </p>
 
 <p>
-	The function <b>pre_generate_report(equipment:Equipment, files, generating_multiple_reports = False)</b> acts as a pre-fight test. It checks if the proper template is given for the equipment and passes the equipment and a uniquely generated filename to the <b>generate_report</b> function. The function <b>generate_report(cur_eqpt, equipment:Equipment, file_name:str, template_file:str, files, debug = False)->bool</b> connects to the Mathcad API, opens the template file specific to the mounting location, updates the input values specific to the equipment, and then saves the document. If generateing multiple reports, multithreading is used to speed up the process. Currently 4 threads are being used, but feel free to increase this number if the workflow demands more throughput. This variable is called <b>num_threads</b> in the event <b>generate_report_for_all</b>.   
+	The function <b>pre_generate_report(equipment:Equipment, files, generating_multiple_reports = False)</b> acts as a pre-fight test. It checks if the proper template is given for the equipment and passes the equipment and a uniquely generated filename to the <b>generate_report</b> function. The function <b>generate_report(cur_eqpt, equipment:Equipment, file_name:str, template_file:str, files, debug = False)->bool</b> connects to the Mathcad API, opens the template file specific to the mounting location, updates the input values specific to the equipment, and then saves the document. If generateing multiple reports, multithreading is used to speed up the process. Currently 4 threads are being used, but feel free to increase this number if the workflow demands more throughput. This variable is called <b>num_threads</b> in the event <b>generate_report_for_all</b>.
 </p>
 <p>
-	The function <b>mathcad_calculate(eqpt, files, debug = False)</b> allows the user to preview the Mathcad calculation output. It returns a dictionary with the output values. The debug variable changes if Mathcad will display the windows being edited or not. When debug = False, no window is shown, when debug = True, windows are shown.  
+	The function <b>mathcad_calculate(eqpt, files, debug = False)</b> allows the user to preview the Mathcad calculation output. It duplicates the template file into a temp file, takes the inputs and waits for the outputs to generate. It then deletes the temp file when finished. It returns a dictionary with the output values. The debug variable changes if Mathcad will display the windows being edited or not. When debug = False, no window is shown, when debug = True, windows are shown.  
 </p>
 </div>
 
@@ -87,19 +87,19 @@
 	Choose equipment:   Once the user has input the excel file they want to read from, the program extracts all information in the <b>get_eqpt_from_xl</b> function and places all the equipment names in the Choose Equipment column.
 </p>
 <p>
-	Inputs:   Once we get the Equipment from the <b>get_eqpt_from_xl</b> function, we can then render it to the input fields in the GUI. 
+	Inputs:   Once we get the Equipment from the <b>get_eqpt_from_xl</b> function, we can then render it to the input fields in the GUI.
 </p>
 <p>
-	Outputs:  If the user clicks the <b>Preview Calculation Outputs</b> button, the inputs from the current equipment being used is sent to the template corresponding to the correct mounting location and the output fields are gathered via the <b>mathcad_calculate</b> function. The outputs are saved in the Outputs class and the information is displayed in the GUI. 
+	Outputs:  If the user clicks the <b>Preview Calculation Outputs</b> button, the inputs from the current equipment being used is sent to the template corresponding to the correct mounting location and the output fields are gathered via the <b>mathcad_calculate</b> function. The outputs are saved in the Outputs class and the information is displayed in the GUI.
 </p>
 <p>
-	Preview Images:  The user has the option to include preview images that correspond to the mounting locations. The images must be included in the excel document. Use the <b>example_sheet.xlsx</b> as a template. Images muse be .png or .jpg or .jpeg. The images are gathered from the excel sheet using the <b>get_images_from_xl(self, num_images:int)</b> function. Images are stored as binaries. When the user views a different equipment, the image corresponding to the mounting location is loaded into the Image Preview section of the GUI. Use ./dist/img_to_b64.py to convert images from .png/.jpg to binaries. It provides a python file called output.py with the binaries stored in variables. Preview images are automatically converted to binaries in <b>get_images_from_xl</b>. 
+	Preview Images:  The user has the option to include preview images that correspond to the mounting locations. The images must be included in the excel document. Use the <b>example_sheet.xlsx</b> as a template. Images muse be .png or .jpg or .jpeg. The images are gathered from the excel sheet using the <b>get_images_from_xl(self, num_images:int)</b> function. Images are stored as binaries. When the user views a different equipment, the image corresponding to the mounting location is loaded into the Image Preview section of the GUI. Use ./dist/img_to_b64.py to convert images from .png/.jpg to binaries. It provides a python file called output.py with the binaries stored in variables. Preview images are automatically converted to binaries in <b>get_images_from_xl</b>.
 </p>
 
 </div>
 <h4 style = "text-align:center">Saving to the Database</h4>
 <div style = "margin-left:auto; margin-right:auto;width:80vw; padding:0 20px 50px 20px;">
 <p>
-	Saving to Database:   The database is a .csv file which holds some important information about generated repors. The function <b>save_to_csv</b> is used. When the user decides to save the report to the database, they are saving the equipment name, mounting location, tags, and the generated report's unique filename. The user can choose a specific database to save to, or it will save to the default database located in the mathcad_automation_output folder.  
+	Saving to Database:   The database is a .csv file which holds some important information about generated repors. The function <b>save_to_csv</b> is used. When the user decides to save the report to the database, they are saving the equipment name, mounting location, tags, and the generated report's unique filename. The user can choose a specific database to save to, or it will save to the default database located in the mathcad_automation_output folder.
 </p>
 </div>
